# phishing_end2end

./: .gitignore  dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
notebooks/: phishing_analysis.ipynb
scripts/: run_mlflow.sh
src/: app.py  data_loader.py  evaluate.py  hyperparameter_tuning.py  predict.py  preprocess.py  train.py
src/models/: model.pkl  vectorizer.pkl
src/templates/: form.html
tests/: test_app.py  test_data_pipeline.py
